<?xml version="1.0" encoding="utf-8"?>
<resources>

   	<string name="off_cpu0">echo "1" > /sys/devices/system/cpu/cpu1/online</string>
    <string name="version_name">dev</string>
    <string name="is_freeze">已冻结</string>
    <string name="is_not_freeze">未冻结</string>
    <string name="dialog_title">警告</string>
    <string name="add_freeze_message_format">你确定要冻结“%1$s”吗？</string>
    <string name="remove_freeze_message_format">你确定要解冻“%1$s”吗？</string> 
    <string name="sys_app">系统软件</string>
    <string name="uses_app">用户软件</string>
    <string name="tip"><b>·“系统软件”</b>即表示系统组件内的软件，不建议随意冻结，会有可能造成系统崩溃或系统功能无效等问题。
\n\n<b>·“用户软件”</b>即表示用用户自己安装的软件列表，列表内一般情况下可以随意冻结，但是有可能会导致你使用的软件一些运行服务异常。</string>
    <string name="loading">正在展开列表 &#8230;&#8230;</string>
    <string name="root_fail">无法获取Root权限，跳转到ROOT管理界面，请给予软件权限！</string>
    <string name="clean_freezen_list">一键解冻所有软件</string>
    <string name="freeze_app">已冻结的软件</string>
    <string name="success">成功执行！约几秒后，被冻结的软件会陆续恢复！</string>
    <string name="unnecessary_unfreeze_software">无被冻结的应用</string>

</resources>
