<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	android:orientation="vertical"
	tools:context="com.easydroid.romctrl.Freeze"
	android:gravity="center">

	<ImageView
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:src="@drawable/animation_bg"/>

	<TextView
		android:id="@+id/textView1"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="55.0dp"
		android:layout_marginBottom="55.0dp"
		android:text="@string/tip"/>

	<Button
		android:id="@+id/all_apps"
		android:paddingTop="15.0dp"
		android:paddingBottom="15.0dp"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/sys_app"/>

	<Button
		android:id="@+id/users_app"
		android:paddingTop="15.0dp"
		android:paddingBottom="15.0dp"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/uses_app"/>

	<Button
		android:id="@+id/freezed_app"
		android:paddingTop="15.0dp"
		android:paddingBottom="15.0dp"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/freeze_app"/>

	<Button
		android:id="@+id/clean_list"
		android:paddingTop="15.0dp"
		android:paddingBottom="15.0dp"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/clean_freezen_list"/>

</LinearLayout>

